# dune-release-testing-with-generated-opam

./: CHANGES.md  dummy.opam  dune-project
lib/: dune
